--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.14.9'
+    implementation 'androidx.mediarouter:mediarouter:1.2.2'
 }
